--- a/Superstore_Sales_Prediction.ipynb
+++ b/Superstore_Sales_Prediction.ipynb
@@ -2083,12 +2083,12 @@
         "df"
       ],
       "metadata": {
-        "id": "OScac5BnZHvk",
-        "outputId": "8c9f1211-3a9f-44f9-cefb-2d356b1b7100",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "OScac5BnZHvk",
+        "outputId": "8c9f1211-3a9f-44f9-cefb-2d356b1b7100"
       },
       "execution_count": 45,
       "outputs": [
@@ -3013,10 +3013,10 @@
         "from keras.layers import Dense\n",
         "from keras.models import Sequential\n",
         "inputs = tf.keras.Input(shape =(X_train.shape[1],))\n",
-        "x = tf.keras.layers.Dense(32, activation='relu')(inputs)\n",
-        "x = tf.keras.layers.Dense(32, activation='relu')(x)\n",
+        "x = tf.keras.layers.Dense(64, activation='relu')(inputs)\n",
         "x = tf.keras.layers.Dense(64, activation='relu')(x)\n",
-        "x = tf.keras.layers.Dense(64, activation='relu')(x)\n",
+        "x = tf.keras.layers.Dense(128, activation='relu')(x)\n",
+        "x = tf.keras.layers.Dense(128, activation='relu')(x)\n",
         "outputs = tf.keras.layers.Dense(1, activation='linear')(x)\n",
         "\n",
         "model = tf.keras.Model(inputs=inputs, outputs=outputs)\n",
@@ -3027,33 +3027,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vgM4FyTp9doz",
-        "outputId": "c987dd3a-d4f7-46bf-c877-c6a13d04ca62"
+        "outputId": "441ec7d6-ab3c-4f21-a813-aa30b2236df8"
       },
-      "execution_count": 116,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"model_12\"\n",
+            "Model: \"model_13\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " input_13 (InputLayer)       [(None, 3)]               0         \n",
+            " input_14 (InputLayer)       [(None, 3)]               0         \n",
             "                                                                 \n",
-            " dense_60 (Dense)            (None, 32)                128       \n",
+            " dense_65 (Dense)            (None, 64)                256       \n",
             "                                                                 \n",
-            " dense_61 (Dense)            (None, 32)                1056      \n",
+            " dense_66 (Dense)            (None, 64)                4160      \n",
             "                                                                 \n",
-            " dense_62 (Dense)            (None, 64)                2112      \n",
+            " dense_67 (Dense)            (None, 128)               8320      \n",
             "                                                                 \n",
-            " dense_63 (Dense)            (None, 64)                4160      \n",
+            " dense_68 (Dense)            (None, 128)               16512     \n",
             "                                                                 \n",
-            " dense_64 (Dense)            (None, 1)                 65        \n",
+            " dense_69 (Dense)            (None, 1)                 129       \n",
             "                                                                 \n",
             "=================================================================\n",
-            "Total params: 7,521\n",
-            "Trainable params: 7,521\n",
+            "Total params: 29,377\n",
+            "Trainable params: 29,377\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
             "None\n"
@@ -3086,50 +3086,82 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5zFTXxAE_6x1",
-        "outputId": "d812e73f-9474-4781-f71a-fee94b642762"
+        "outputId": "ae08b2f6-69e6-457f-e132-ee561466d2eb"
       },
-      "execution_count": 117,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/100\n",
-            "250/250 [==============================] - 2s 3ms/step - loss: 353640.7812 - val_loss: 178992.8750 - lr: 0.0010\n",
+            "250/250 [==============================] - 2s 3ms/step - loss: 250704.1875 - val_loss: 108806.1406 - lr: 0.0010\n",
             "Epoch 2/100\n",
-            "250/250 [==============================] - 1s 3ms/step - loss: 179182.8906 - val_loss: 112730.3047 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 151162.7031 - val_loss: 106124.0234 - lr: 0.0010\n",
             "Epoch 3/100\n",
-            "250/250 [==============================] - 1s 4ms/step - loss: 147114.3125 - val_loss: 103455.5312 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 150103.9531 - val_loss: 96283.2109 - lr: 0.0010\n",
             "Epoch 4/100\n",
-            "250/250 [==============================] - 1s 4ms/step - loss: 141554.6719 - val_loss: 89681.3750 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 141669.4531 - val_loss: 91912.7969 - lr: 0.0010\n",
             "Epoch 5/100\n",
-            "250/250 [==============================] - 1s 3ms/step - loss: 136483.9531 - val_loss: 88931.3984 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 139310.3281 - val_loss: 87319.8750 - lr: 0.0010\n",
             "Epoch 6/100\n",
-            "250/250 [==============================] - 1s 2ms/step - loss: 134237.4688 - val_loss: 83640.3516 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 133490.7344 - val_loss: 87073.5781 - lr: 0.0010\n",
             "Epoch 7/100\n",
-            "250/250 [==============================] - 1s 3ms/step - loss: 130725.8359 - val_loss: 87331.4688 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 133294.6719 - val_loss: 87467.6797 - lr: 0.0010\n",
             "Epoch 8/100\n",
-            "250/250 [==============================] - 1s 3ms/step - loss: 130060.5312 - val_loss: 85173.6250 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 132655.7344 - val_loss: 83719.4062 - lr: 0.0010\n",
             "Epoch 9/100\n",
-            "250/250 [==============================] - 1s 3ms/step - loss: 128992.7266 - val_loss: 79718.6641 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 126800.9062 - val_loss: 112995.6562 - lr: 0.0010\n",
             "Epoch 10/100\n",
-            "250/250 [==============================] - 1s 2ms/step - loss: 127911.4531 - val_loss: 79642.3203 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 130692.7031 - val_loss: 78146.0938 - lr: 0.0010\n",
             "Epoch 11/100\n",
-            "250/250 [==============================] - 1s 2ms/step - loss: 126840.1562 - val_loss: 80051.5469 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 127752.4844 - val_loss: 87402.2188 - lr: 0.0010\n",
             "Epoch 12/100\n",
-            "250/250 [==============================] - 1s 3ms/step - loss: 126061.0703 - val_loss: 88162.3984 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 128787.5078 - val_loss: 77653.3438 - lr: 0.0010\n",
             "Epoch 13/100\n",
-            "250/250 [==============================] - 1s 2ms/step - loss: 127388.5703 - val_loss: 76039.4609 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 125455.9375 - val_loss: 85011.2109 - lr: 0.0010\n",
             "Epoch 14/100\n",
-            "250/250 [==============================] - 1s 3ms/step - loss: 125455.6406 - val_loss: 76643.5859 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 129735.1797 - val_loss: 85340.7266 - lr: 0.0010\n",
             "Epoch 15/100\n",
-            "250/250 [==============================] - 1s 2ms/step - loss: 127199.7344 - val_loss: 79479.1641 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 126026.8516 - val_loss: 75095.7812 - lr: 0.0010\n",
             "Epoch 16/100\n",
-            "250/250 [==============================] - 1s 2ms/step - loss: 126265.4062 - val_loss: 80222.0938 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 4ms/step - loss: 125386.7656 - val_loss: 84009.6250 - lr: 0.0010\n",
             "Epoch 17/100\n",
-            "250/250 [==============================] - 1s 2ms/step - loss: 125425.5000 - val_loss: 76731.5469 - lr: 0.0010\n",
+            "250/250 [==============================] - 1s 4ms/step - loss: 129295.2344 - val_loss: 75904.0938 - lr: 0.0010\n",
             "Epoch 18/100\n",
-            "250/250 [==============================] - 1s 2ms/step - loss: 125210.6641 - val_loss: 86493.3438 - lr: 0.0010\n"
+            "250/250 [==============================] - 1s 4ms/step - loss: 125267.1875 - val_loss: 75394.1094 - lr: 0.0010\n",
+            "Epoch 19/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 127282.4531 - val_loss: 74329.2109 - lr: 0.0010\n",
+            "Epoch 20/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 124883.6328 - val_loss: 75097.6016 - lr: 0.0010\n",
+            "Epoch 21/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 125810.8203 - val_loss: 72292.6797 - lr: 0.0010\n",
+            "Epoch 22/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 127352.7734 - val_loss: 75442.4766 - lr: 0.0010\n",
+            "Epoch 23/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 124586.9531 - val_loss: 78196.2812 - lr: 0.0010\n",
+            "Epoch 24/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 123783.1797 - val_loss: 74434.4688 - lr: 0.0010\n",
+            "Epoch 25/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 123725.9062 - val_loss: 74674.3047 - lr: 0.0010\n",
+            "Epoch 26/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 124769.2656 - val_loss: 72251.5547 - lr: 0.0010\n",
+            "Epoch 27/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 123147.1406 - val_loss: 78787.9062 - lr: 0.0010\n",
+            "Epoch 28/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 124853.3125 - val_loss: 79980.1484 - lr: 0.0010\n",
+            "Epoch 29/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 122722.0156 - val_loss: 70589.7031 - lr: 0.0010\n",
+            "Epoch 30/100\n",
+            "250/250 [==============================] - 1s 2ms/step - loss: 123627.7578 - val_loss: 72345.3203 - lr: 0.0010\n",
+            "Epoch 31/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 124662.2969 - val_loss: 72835.5703 - lr: 0.0010\n",
+            "Epoch 32/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 121569.6875 - val_loss: 73067.3984 - lr: 0.0010\n",
+            "Epoch 33/100\n",
+            "250/250 [==============================] - 1s 3ms/step - loss: 124696.7422 - val_loss: 73125.8203 - lr: 0.0010\n",
+            "Epoch 34/100\n",
+            "250/250 [==============================] - 1s 4ms/step - loss: 122262.6484 - val_loss: 71652.9922 - lr: 0.0010\n"
           ]
         }
       ]
@@ -3145,15 +3177,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "te0iP76iBmRS",
-        "outputId": "ede3bd83-ffde-40a8-d069-bb03f6bea9e6"
+        "outputId": "daf2ea77-adab-41b0-92f7-8d02c72649b9"
       },
-      "execution_count": 118,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test Loss: 76039.46094\n"
+            "Test Loss: 70589.70312\n"
           ]
         }
       ]
@@ -3171,16 +3203,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0p2_odNDGU0n",
-        "outputId": "69f69ca3-e3b5-4c9d-b378-87f4e313a1c9"
+        "outputId": "d025a70a-5b1b-4f5c-e974-1e34c638fc51"
       },
-      "execution_count": 119,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "63/63 [==============================] - 0s 1ms/step\n",
-            "Test R^2 Score: 0.80254\n"
+            "Test R^2 Score: 0.81669\n"
           ]
         }
       ]
@@ -3188,33 +3220,33 @@
     {
       "cell_type": "code",
       "source": [
-        "model.predict([[28,3,2]])"
+        "model.predict([[28,3,0]])"
       ],
       "metadata": {
         "id": "AznUp745DxhT",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c9b2225b-8cd4-4c8d-f1fd-919f6b1dcb69"
+        "outputId": "3466d3ab-fc32-4ca2-cfc5-507a1942a4fd"
       },
-      "execution_count": 122,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 152ms/step\n"
+            "1/1 [==============================] - 0s 92ms/step\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[3385.1147]], dtype=float32)"
+              "array([[2238.791]], dtype=float32)"
             ]
           },
           "metadata": {},
-          "execution_count": 122
+          "execution_count": 128
         }
       ]
     },
